# Skirk

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.fa.md  README.md  docker-compose.yml  install.sh  pyproject.toml
.github/workflows/: docker-image.yml  release.yml  smoke.yml
clients/android/: README.md  settings.gradle.kts
clients/android/app/: build.gradle.kts
clients/android/app/src/debug/java/app/skirk/client/: DebugControlReceiver.kt
clients/android/app/src/main/: AndroidManifest.xml
clients/android/app/src/main/java/app/skirk/client/: AndroidSkirkEngine.kt  ClientProfile.kt  HevTun2Socks.kt  (+4 more)
clients/desktop/: README.md  index.html  package-lock.json  package.json
clients/desktop/scripts/: package_windows_portable.py  stage_sidecars.sh
clients/desktop/src/: App.tsx  styles.css
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop/src-tauri/src/: lib.rs  main.rs
clients/desktop/src/lib/: api.ts
cmd/skirk/: client_ui.go  exit_lock_fallback.go  exit_lock_unix.go  instances.go  instances_test.go  main.go  menu.go  oauth_wizard.go  service.go  service_test.go  setup.go  setup_test.go
docs/: clients.md  development.md  drive-mux-v5.md  go_skirk.md  install.md  optimized_throughput_2026_05_02.md  release.md  setup.md  skirk_modes.md
internal/skirk/: config.go  config_test.go  drive.go  drive_test.go  httpclient.go  httpclient_test.go  httpproxy.go  httpproxy_test.go  mux.go  protocol.go  protocol_test.go  socksdial_test.go  socksserver.go  store.go  tunnel.go  tunnel_test.go
scripts/: package_release.sh
