[project]
name = "skirk"
version = "0.1.0"
description = "Selectable Skirk transport prototypes for restricted Google-reachable networks."
requires-python = ">=3.11"
dependencies = [
  "cryptography>=45.0.0",
]

[project.scripts]
skirk = "skirk.cli:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["skirk*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
